# robocup_kidsize_seu_2025-2026

./: .gitattributes  README.md
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/: CMakeLists.txt  main.cpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/drivers/: CMakeLists.txt
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/options/: options.cpp  options.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/: .player.cpp.swp  CMakeLists.txt  play_with_gc.cpp  play_with_remote.cpp  player.cpp  player.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/core/: clock.hpp  worldmodel.cpp  worldmodel.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/engine/: CMakeLists.txt
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/fsm/: CMakeLists.txt  fsm.cpp  fsm_state_dribble.hpp  fsm_state_goto_ball.hpp  fsm_state_kick_ball.hpp  fsm_state_ready.hpp  fsm_state_search_ball.hpp  fsm_state_sl.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/localization/: inverse.h  kalman.cpp  kalman.h  localization.cpp  localization.h  soccermap.cpp  soccermap.h
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/sensor/: CMakeLists.txt  button.cpp  camera.cpp  camera.hpp  gamectrl.cpp  gamectrl.hpp  hear.cpp  hear.hpp  imu.cpp  imu.hpp  motor.cpp  motor.hpp  sensor.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/server/: server.cpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/skill/: CMakeLists.txt  skill.cpp  skill.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/task/: action_task.hpp  led_task.hpp  look_task.hpp  say_task.hpp  task.hpp  walk_task.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/controller/player/vision/: CMakeLists.txt  vision.cpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/: CMakeLists.txt  debuger.cpp  main.cpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/action_debuger/: CMakeLists.txt  action_debuger.cpp  action_debuger.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/action_monitor/: CMakeLists.txt  action_monitor.cpp  action_monitor.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/camera_setter/: camera_setter.cpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/image_debuger/: CMakeLists.txt  image_debuger.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/image_monitor/: CMakeLists.txt  image_monitor.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/joint_revise/: CMakeLists.txt  joint_revise.cpp  joint_revise.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/tcp_client/: tcp_client.cpp  tcp_client.hpp
Environment-Configuration-Installation-Files/unirobot4-src-16.04/src/tools/debuger/team_monitor/: CMakeLists.txt  state_monitor.cpp  state_monitor.hpp  team_monitor.cpp
(+340 files in other folders)
